no need to _DeleteDestinationFilesIfSpecified in precompute

--- a/src/WebSdk/Publish/Targets/PublishTargets/Microsoft.NET.Sdk.Publish.FileSystem.targets
+++ b/src/WebSdk/Publish/Targets/PublishTargets/Microsoft.NET.Sdk.Publish.FileSystem.targets
@@ -51,7 +51,7 @@ Copyright (C) Microsoft Corporation. All rights reserved.
   ***********************************************************************************************
  -->
 
-  <Target Name="_DeleteDestinationFilesIfSpecified">
+  <Target Name="_DeleteDestinationFilesIfSpecified" PrecomputationMode="Skip" >
     <PropertyGroup>
       <PublishUrl Condition="'$(PublishUrl)' != '' And !HasTrailingSlash('$(PublishUrl)')">$(PublishUrl)\</PublishUrl>
     </PropertyGroup>
